--- a/404.html
+++ b/404.html
@@ -49,6 +49,7 @@
 			else
 			{
 				const logged=checkUser();
+				alert(logged);
 				if(logged)
 				{
 					const profileDiv = document.createElement("div");
