--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			}
 			else
 			{
-				const logged=checkUser();
+				const logged= await checkUser();
 				alert(logged);
 				if(logged)
 				{
