--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			}
 			else
 			{
-				const logged= await checkUser();
+				const logged= username===(await getUsername());
 				if(logged)
 				{
 					const profileDiv = document.createElement("div");
@@ -57,8 +57,6 @@
 					heading.innerHTML = 'Welcome <span id="username">'+username+'</span>';
 					profileDiv.appendChild(heading);
 					document.body.appendChild(profileDiv);
-					
-					
 				}
 				else
 				{						
@@ -109,9 +107,6 @@
 			return treeData;
 		}
 		async function checkUser() {
-		const supabaseUrl = 'https://htbxgsolhsxacotnprjq.supabase.co'; // Replace with your Supabase URL
-        const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0Ynhnc29saHN4YWNvdG5wcmpxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDE2MzQ2MzAsImV4cCI6MjA1NzIxMDYzMH0.OJy9IdF8aWh_YuqU3WIdvuqAX-2GAfTTjMxu9zMAHMo'; // Replace with your Supabase Anon Key
-        const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey);
 			
 		  const { data: { user } } = await supabaseClient.auth.getUser();
 
@@ -122,6 +117,41 @@
 			console.log('No user logged in');
 			return false;
 		  }
+		}
+		async function getUsername() {
+			const supabaseUrl = 'https://htbxgsolhsxacotnprjq.supabase.co'; // Replace with your Supabase URL
+			const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0Ynhnc29saHN4YWNvdG5wcmpxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDE2MzQ2MzAsImV4cCI6MjA1NzIxMDYzMH0.OJy9IdF8aWh_YuqU3WIdvuqAX-2GAfTTjMxu9zMAHMo'; // Replace with your Supabase Anon Key
+			const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey);
+		
+		  // Step 1: Get the logged-in user
+		  const { data: { user }, error: userError } = await supabaseClient.auth.getUser();
+
+		  if (userError) {
+			console.error('Error getting user:', userError.message);
+			return null;
+		  }
+
+		  if (!user) {
+			console.log('No user logged in');
+			return null;
+		  }
+
+		  const userId = user.id;
+
+		  // Step 2: Query the `users` table for the username
+		  const { data, error } = await supabaseClient
+			.from('users') // your public user table
+			.select('username')
+			.eq('uuid', userId) // match on auth uuid
+			.single(); // Expecting exactly one match
+
+		  if (error) {
+			console.error('Error fetching username:', error.message);
+			return null;
+		  }
+
+		  console.log('Username:', data.username);
+		  return data.username;
 		}
 
 		</script>
