--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 	</body>
 
 	<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-	<script src="/src/js/main.js">
+	<script src="/src/js/main.js"></script>
 	</body>
 </html>
