--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@
 	</body>
 
 	<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-	<script>
+	<script	>
 	window.onload = async function() {
 		const supabaseUrl = 'https://htbxgsolhsxacotnprjq.supabase.co'; // Replace with your Supabase URL
         const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0Ynhnc29saHN4YWNvdG5wcmpxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDE2MzQ2MzAsImV4cCI6MjA1NzIxMDYzMH0.OJy9IdF8aWh_YuqU3WIdvuqAX-2GAfTTjMxu9zMAHMo'; // Replace with your Supabase Anon Key
@@ -47,7 +47,12 @@
 			}
 			else
 			{
-				const logged = (usernam) username===(await getUsername());
+				let logged=false;
+				if(username == await getUsername())
+					logged=true;
+				else
+					logged=false;
+				
 				if(logged)
 				{
 					const profileDiv = document.createElement("div");
