--- a/index.html
+++ b/index.html
@@ -19,5 +19,5 @@
     </body>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-    <script src="/src/main.js"></script>
+    <script src="/src/js/main.js"></script>
 </html>
