--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<link rel="stylesheet" href="/src/css/style-general.css">
 		<link rel="stylesheet" href="/src/css/style-graph.css">
+    <script src="/src/js/banner.js" defer></script>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Argument Tree</title>
@@ -9,14 +10,9 @@
 	</head>
 
 	<body>
-		<div id="banner">
-			<a href="index.html" align="center">Main Page</a>
-			<a href="explore.html">Explore</a>
-			<a href="login.html">Log in</a>
-			<a id="signup" href="signup.html">Sign up</a>
-		</div>
+		<div id="banner"></div>
 		<div id="graph" align="center"></div>
-    </body>
+  </body>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
     <script src="/src/js/main.js"></script>
