--- a/signup.html
+++ b/signup.html
@@ -29,95 +29,87 @@
     const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey);
     
     async function signup() {
-    const email    = document.getElementById('email').value;
-    const password = document.getElementById('password').value;
-    const username = document.getElementById('username').value;
-    const errorDiv = document.getElementById('error');
-    let   problem  = false;
+      const email    = document.getElementById('email').value;
+      const password = document.getElementById('password').value;
+      const username = document.getElementById('username').value;
+      const errorDiv = document.getElementById('error');
+      let   problem  = false;
 
-    // Clear previous error messages
-    errorDiv.textContent = '';
+      // Clear previous error messages
+      errorDiv.textContent = '';
 
-    if (!await controlUsername(username)) problem = true;
-    if (!await controlEmail(email))       problem = true;
+      if (!await controlUsername(username)) problem = true;
+      // we no longer need to await controlEmail – it'll always pass:
+      // if (!await controlEmail(email)) problem = true;
 
-    if (!problem) {
-      try {
-        // Sign up the user in Auth
-        const { data: authData, error: authError } = await supabaseClient.auth.signUp({ email, password });
-        if (authError) throw new Error(authError.message);
-        if (!authData?.user?.id) throw new Error('User ID is missing after sign-up.');
+      if (!problem) {
+        try {
+          // Sign up the user
+          const { data: authData, error: authError } = await supabaseClient.auth.signUp(
+            { email, password },
+            { // disable the built-in redirect so we stay in this flow
+              redirectTo: window.location.origin  
+            }
+          );
+          if (authError) {
+            // Look specifically for the "duplicate email" case:
+            if (authError.message.toLowerCase().includes('already registered') ||
+                authError.message.toLowerCase().includes('duplicate')) {
+              errorDiv.textContent = 'That email is already registered.';
+              return;    // bail out early
+            }
+            // for any other auth error, show its message
+            throw authError;
+          }
 
-        // Insert the profile row with username & user_id
-        const { data, error } = await supabaseClient
-          .from('User')
-          .insert([{ user_id: authData.user.id, username }]);
-        if (error) console.error('Error inserting display name:', error);
-        else       console.log('Display name inserted successfully:', data);
-      } catch (err) {
-        errorDiv.textContent = err.message;
-        return;
+          if (!authData?.user?.id) {
+            throw new Error('User ID is missing after sign-up.');
+          }
+
+          // Insert the profile row with username & user_id
+          const { data, error } = await supabaseClient
+            .from('User')
+            .insert([{ user_id: authData.user.id, username }]);
+          if (error) {
+            console.error('Error inserting display name:', error);
+            // you could surface this to the user if you like
+          }
+
+          // Everything succeeded → log them in
+          login(email, password);
+
+        } catch (err) {
+          // Fallback for any unexpected errors
+          console.error(err);
+          errorDiv.textContent = err.message || 'Something went wrong.';
+        }
+      }
+    }
+
+    async function controlUsername(username) {
+      const errorDiv = document.getElementById('error');
+
+      if (!username) {
+        errorDiv.textContent = 'Username cannot be empty.';
+        return false;
       }
 
-      // Auto-login after signup
-      login(email, password);
-    }
-  }
+      const { data, error } = await supabaseClient
+        .from('User')
+        .select('user_id', { count: 'exact' })
+        .eq('username', username)
+        .limit(1);
 
-  async function controlUsername(username) {
-    const errorDiv = document.getElementById('error');
+      if (error) {
+        console.error('Error checking username:', error);
+        errorDiv.textContent = 'Unable to verify username uniqueness.';
+        return false;
+      }
 
-    if (!username) {
-      errorDiv.textContent = 'Username cannot be empty.';
-      return false;
-    }
-
-    // Query for any existing row with this username
-    const { data, error } = await supabaseClient
-      .from('User')
-      .select('user_id', { count: 'exact' })
-      .eq('username', username)
-      .limit(1);
-
-    if (error) {
-      console.error('Error checking username:', error);
-      errorDiv.textContent = 'Unable to verify username uniqueness.';
-      return false;
-    }
-
-    if (data.length > 0) {
-      errorDiv.textContent = 'That username is already taken.';
-      return false;
-    }
-
-    return true;
-  }
-
-  async function controlEmail(email) {
-    const errorDiv = document.getElementById('error');
-
-    if (!email) {
-      errorDiv.textContent = 'Email cannot be empty.';
-      return false;
-    }
-
-    // If your "User" table also stores emails:
-    const { data, error } = await supabaseClient
-      .from('User')
-      .select('user_id', { count: 'exact' })
-      .eq('email', email)
-      .limit(1);
-
-    if (error) {
-      console.error('Error checking email:', error);
-      errorDiv.textContent = 'Unable to verify email uniqueness.';
-      return false;
-    }
-
-    if (data.length > 0) {
-      errorDiv.textContent = 'That email is already registered.';
-      return false;
-    }
+      if (data.length > 0) {
+        errorDiv.textContent = 'That username is already taken.';
+        return false;
+      }
 
     return true;
   }
