--- a/login.html
+++ b/login.html
@@ -6,14 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Login</title>
 		<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+    <script src="/src/js/banner.js" defer></script>
 	</head>
 	<body>
-		<div id="banner">
-			<a href="index.html" align="center">Main Page</a>
-			<a href="explore.html">Explore</a>
-			<a href="login.html">Log in</a>
-			<a id="signup" href="signup.html">Sign up</a>
-		</div>
+		<div id="banner"></div>
 		
 		<div class="login-container">
 			<h2>Login</h2>
