--- a/explore.html
+++ b/explore.html
@@ -10,6 +10,10 @@
 	</head>
 	<body>
 		<div id="banner"></div>
-	  <div id="graph"></div>
+	  <div id="graph">
+      <div>
+        Sorry, still work in progress, why don't you go see <a href="/admin/rigged_pasta">this for example?</a>
+      </div>
+    </div>
   </body>
 </html>
