--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 
 	<body>
 		<div id="banner"></div>
-		<div id="graph" align="center"></div>
+		<div id="graph" align="center">
+      <div  id="explaination">
+      Our world is increasingly trapped in echo chambers, and debates have become harder to conduct as we tie our identities to simplistic opinions about complex problems.
+      This website aims to present intricate flows of thought—underlying both individual and collective opinions—in a simple and clear way. This approach helps us understand opposing views on political, ideological, and personal conflicts, making it easier to find solutions without misunderstandings or logical fallacies.
+      </div>
+    </div>
   </body>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
