--- a/signup.html
+++ b/signup.html
@@ -21,9 +21,9 @@
 		</div>
 	</body>
 	<script>
-    const supabaseUrl = 'https://htbxgsolhsxacotnprjq.supabase.co';
-    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0Ynhnc29saHN4YWNvdG5wcmpxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDE2MzQ2MzAsImV4cCI6MjA1NzIxMDYzMH0.OJy9IdF8aWh_YuqU3WIdvuqAX-2GAfTTjMxu9zMAHMo';
-    const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey);
+    //const supabaseUrl = 'https://htbxgsolhsxacotnprjq.supabase.co';
+    //const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0Ynhnc29saHN4YWNvdG5wcmpxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDE2MzQ2MzAsImV4cCI6MjA1NzIxMDYzMH0.OJy9IdF8aWh_YuqU3WIdvuqAX-2GAfTTjMxu9zMAHMo';
+    //const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey);
       
     async function signup() {
       const email    = document.getElementById('email').value;
@@ -68,6 +68,5 @@
       }
       return true;
     }
-  }
   </script>
 </html>
