--- a/login.html
+++ b/login.html
@@ -11,13 +11,13 @@
 	<body>
 		<div id="banner"></div>
 		
-		<div class="login-container">
-			<h2>Login</h2>
-			<input type="text" id="email" placeholder="Email" required>
-			<input type="password" id="password" placeholder="Password" required>
-			<button onclick="login()">Login</button>
-			<div id="error" class="error"></div>
-		</div>
+    <div class="login-container">
+      <h2>Login</h2>
+      <input type="text" id="email" placeholder="Email" required />
+      <input type="password" id="password" placeholder="Password" required />
+      <button onclick="login()">Login</button>
+      <div id="error" class="error"></div>
+  </div>
 </body>
     <script>
         // Initialize Supabase client
