check if project title is repeated before inserting

--- a/404.html
+++ b/404.html
@@ -11,8 +11,8 @@
 
 	<body>
 		<div id="banner"></div>
-		<div id="graph" align="center">
-    </div>
+		<div id="graph" align="center"></div>
+    <div id="error" </div>
   </body>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
