--- a/explore.html
+++ b/explore.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<link rel="stylesheet" href="/src/css/style-general.css">
+		<link rel="stylesheet" href="src/css/style-general.css">
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Explore</title>
 		<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-    <script src="/src/js/banner.js" defer></script>
+    <script src="src/js/banner.js" defer></script>
 	</head>
 	<body>
 		<div id="banner"></div>
