--- a/explore.html
+++ b/explore.html
@@ -7,6 +7,7 @@
 		<title>Explore</title>
 		<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
     <script src="src/js/banner.js" defer></script>
+    <link rel="stylesheet" href="src/css/style-general.css">
 	</head>
 	<body>
 		<div id="banner"></div>
