--- a/explore.html
+++ b/explore.html
@@ -68,6 +68,7 @@
       const box = document.createElement('div');
       box.classList.add("explore-element");
       box.align='center';
+      box.href='/'+username+'/'+projectname;
       
       const user = document.createElement('a');
       user.href='/'+username;
