--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 	<body>
 		<div id="banner"></div>
-		<div id="graph" align="center"></div>
+    <div id="map">
+      <div id="graph"></div>
+    </div>
     <div id="error" </div>
   </body>
 
