--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
 	<body>
 		<div id="banner"></div>
     <div id="map">
-      <div id="graph"></div>
+      <div id="graph" align=center></div>
     </div>
     <div id="error" </div>
   </body>
