--- a/404.html
+++ b/404.html
@@ -10,6 +10,7 @@
 
 	<body>
 		<div id="banner"></div>
+    <div id="label"></div>
     <div id="map">
       <div id="graph" align=center></div>
     </div>
