--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<body>
 		<div id="banner"></div>
-    <div id="label"></div>
+    <div id="label" align=center></div>
     <div id="map">
       <div id="graph" align=center></div>
     </div>
